# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.ui_test") {
  sources = [
    "cj_process.cj",
    "const.cj",
    "ui_test_api.cj",
    "ui_test_common.cj",
    "ui_test_ffi.cj",
    "systemparameter.cj",
  ]

  cj_external_deps = [
    "ability_cangjie_api:ohos.ability",
    "ability_cangjie_api:ohos.ability_delegator_registry",
    "arkui_cangjie_api:ohos.base",
    "bundlemanager_cangjie_api:ohos.bundle_manager",
    "cangjie_api:ohos.encoding.json",
    "cangjie_api:ohos.ffi",
    "hiviewdfx_cangjie_api:ohos.hilog",
    "cangjie_api:ohos.labels",
  ]

  external_deps = [ 
                    "arkxtest:cj_ui_test_ffi",
                    "init:cj_system_parameter_enhance_ffi",
                  ]

  subsystem_name = "testfwk"
  part_name = "testfwk_cangjie_api"
  lib_name = "ui_test"
}
