# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.ui_test") {
  sources = [
    "cj_process.cj",
    "const.cj",
    "ui_test_api.cj",
    "ui_test_common.cj",
    "ui_test_ffi.cj",
    "systemparameter.cj",
  ]

  cj_external_deps = [
    "ability_cangjie_wrapper:ohos.app.ability.ui_ability",
    "ability_cangjie_wrapper:ohos.app.ability.context_constant",
    "ability_cangjie_wrapper:ohos.app.ability.ability_delegator_registry",
    "cangjie_ark_interop:ohos.business_exception",
    "bundlemanager_cangjie_wrapper:ohos.bundle.bundle_manager",
    "cangjie_ark_interop:ohos.callback_invoke",
    "cangjie_ark_interop:ohos.encoding.json",
    "cangjie_ark_interop:ohos.ffi",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "cangjie_ark_interop:ohos.labels",
  ]

  external_deps = [ 
                    "arkxtest:cj_ui_test_ffi",
                    "init:cj_system_parameter_enhance_ffi",
                  ]

  subsystem_name = "testfwk"
  part_name = "testfwk_cangjie_wrapper"
}
